--- a/calc/index.html
+++ b/calc/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="favicon.ico" />
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Expires" content="0">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Calculator" />
+        <link rel="shortcut icon" href="favicon.ico" />
         <link rel="apple-touch-icon" href="icon192white.png" />
         <link rel="manifest" href="manifest.json" />
         <title>Cold Calculator</title>
