Changing manifest version and checking if PWA updates

--- a/calc/index.html
+++ b/calc/index.html
@@ -36,7 +36,7 @@
             <button onclick="chs()">+/-</button>
             <button onclick="swap()">↓↑</button>
             <button onclick="rotate()">↓</button>
-            <button onclick="clx()">CLx</button>
+            <button onclick="clx()">CL<i>x</i></button>
 
             <button onclick="insert(7)">7</button>
             <button onclick="insert(8)">8</button>
