--- a/cifra/index.html
+++ b/cifra/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
+        <link rel='shortcut icon' href='favicon.ico' />
+        <meta name='viewport' content='width=device-width, initial-scale=1' />
+        <meta name='theme-color' content='#000000' />
+        <meta name='description' content='Cifrador' />
+        <link rel='apple-touch-icon' href='icon512.png' />
+        <link rel='manifest' href='manifest.json' />
         <title>Cifrador</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
